# stacks-de-indexer

./: Cargo.toml  README.md  stacks-indexer.yaml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: codegen.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/clarity/: decoder.rs  mod.rs
crates/core/src/config/: mod.rs  schema.rs
crates/core/src/matcher/: mod.rs
crates/core/src/types/: events.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: graphql.rs  http.rs  lib.rs  metrics.rs
crates/storage/: Cargo.toml
crates/storage/src/: backfill.rs  db.rs  lib.rs  reorg.rs
examples/: decode_clarity_value.rs  devnet-explorer.yaml  e2e-test.sh  local_devnet.rs  parse_block_payload.rs
examples/contracts/: counter.clar
examples/testnet-replay/: indexer.yaml  replay.py
